--- a/CCFS Tickets/Src/EditorState/App.editorstate.json
+++ b/CCFS Tickets/Src/EditorState/App.editorstate.json
@@ -91,7 +91,7 @@
         {
           "Category": "OnDemandData",
           "PropertyName": "StartScreen",
-          "RuleProviderType": "User"
+          "RuleProviderType": "Unknown"
         }
       ],
       "StyleName": "",
