--- a/CCFS Tickets/Src/Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Dashboard.fx.yaml
@@ -278,7 +278,7 @@
                             );
                             
                             EditForm(TicketDataEditForm);
-                            Navigate('Ticket Information');
+                            Navigate('Ticket Information X');
                         PaddingBottom: =15.33
                         PaddingLeft: =15.33
                         PaddingRight: =9.26
@@ -373,7 +373,7 @@
                         Height: ='OT Label'.Height
                         Icon: =Icon.DocumentWithContent
                         OnSelect: |-
-                            =Navigate('Ticket Information');
+                            =Navigate('Ticket Information X');
                             NewForm(TicketDataEditForm);
                         ZIndex: =2
 
@@ -515,7 +515,7 @@
                                 )
                             );
                             EditForm(TicketDataEditForm);
-                            Navigate('Ticket Information');
+                            Navigate('Ticket Information X');
                         PaddingBottom: =15.33
                         PaddingLeft: =15.33
                         PaddingRight: =9.26
@@ -663,7 +663,7 @@
                             );
                             
                             EditForm(TicketDataEditForm);
-                            Navigate('Ticket Information');
+                            Navigate('Ticket Information X');
                         PaddingBottom: =15.33
                         PaddingLeft: =15.33
                         PaddingRight: =9.26
@@ -1274,7 +1274,7 @@
                                 )
                             );
                             EditForm(TicketDataEditForm);
-                            Navigate('Ticket Information');
+                            Navigate('Ticket Information X');
                             EditForm(ServiceRequestForm);
                         Width: =Parent.Width
                         ZIndex: =5
