--- a/CCFS Tickets/Src/Ticket Information %28X%29.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Information %28X%29.fx.yaml
@@ -1,4 +1,4 @@
-"'Ticket Information X' As screen.'autoLayout_Sidebar_ver1.0'":
+"'Ticket Information (X)' As screen.'autoLayout_Sidebar_ver1.0'":
     Fill: =RGBA(232, 232, 232, 1)
     OnVisible: |
         =Set(
