--- a/CCFS Tickets/CanvasManifest.json
+++ b/CCFS Tickets/CanvasManifest.json
@@ -139,8 +139,8 @@
     "Dashboard",
     "Dashboard (In Progress)",
     "Ticket Dashboard",
-    "Ticket Information X",
-    "Ticket Information",
+    "Ticket Information (X)",
+    "Ticket Information 2",
     "Asset Dashboard",
     "Site Message Dashboard",
     "Vendor Dashboard"
