--- a/CCFS Tickets/Src/Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Dashboard.fx.yaml
@@ -278,7 +278,7 @@
                             );
                             
                             EditForm(TicketDataEditForm);
-                            Navigate('Ticket Information X');
+                            Navigate('Ticket Information 2');
                         PaddingBottom: =15.33
                         PaddingLeft: =15.33
                         PaddingRight: =9.26
@@ -373,7 +373,7 @@
                         Height: ='OT Label'.Height
                         Icon: =Icon.DocumentWithContent
                         OnSelect: |-
-                            =Navigate('Ticket Information X');
+                            =Navigate('Ticket Information (X)');
                             NewForm(TicketDataEditForm);
                         ZIndex: =2
 
@@ -515,7 +515,7 @@
                                 )
                             );
                             EditForm(TicketDataEditForm);
-                            Navigate('Ticket Information X');
+                            Navigate('Ticket Information 2');
                         PaddingBottom: =15.33
                         PaddingLeft: =15.33
                         PaddingRight: =9.26
@@ -663,7 +663,7 @@
                             );
                             
                             EditForm(TicketDataEditForm);
-                            Navigate('Ticket Information X');
+                            Navigate('Ticket Information 2');
                         PaddingBottom: =15.33
                         PaddingLeft: =15.33
                         PaddingRight: =9.26
@@ -1162,8 +1162,8 @@
                         Text: |
                             =If(
                                 UserAdmin = 1,
-                                "Service Request" ,
-                                "Service Request"
+                                "Service Requests" ,
+                                "Service Requests"
                             )
                         Width: =Parent.Width - Icon1_3.Width
                         X: =0.00
@@ -1274,7 +1274,7 @@
                                 )
                             );
                             EditForm(TicketDataEditForm);
-                            Navigate('Ticket Information X');
+                            Navigate('Ticket Information (X)');
                             EditForm(ServiceRequestForm);
                         Width: =Parent.Width
                         ZIndex: =5
