--- a/CCFS Tickets/Src/EditorState/App.editorstate.json
+++ b/CCFS Tickets/Src/EditorState/App.editorstate.json
@@ -81,7 +81,7 @@
         {
           "Category": "Behavior",
           "PropertyName": "OnStart",
-          "RuleProviderType": "User"
+          "RuleProviderType": "Unknown"
         },
         {
           "Category": "ConstantData",
