--- a/CCFS Tickets/CanvasManifest.json
+++ b/CCFS Tickets/CanvasManifest.json
@@ -140,6 +140,7 @@
     "Ticket Dashboard",
     "Ticket Information (X)",
     "Ticket Information 2",
+    "Ticket Information 2_1",
     "Asset Dashboard",
     "Site Message Dashboard",
     "Vendor Dashboard"
